ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-app-ingress
spec:
  rules:
    - host: minikube.example.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: minikube-app
                port:
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: minikube-app
                port:
                  number: 80
          - path: /manifest.json
            pathType: Exact
            backend:
              service:
                name: minikube-nginx
                port:
                  number: 80
          - path: /sw.js
            pathType: Exact
            backend:
              service:
                name: minikube-nginx
                port:
                  number: 80
  defaultBackend:
    service:
      name: minikube-app2
      port:
        number: 80
